[gd_scene load_steps=4 format=2]

[ext_resource path="res://sound_effects/gun_fire.wav" type="AudioStream" id=1]
[ext_resource path="res://high_tech_hop_gun.gd" type="Script" id=2]
[ext_resource path="res://Assets/gun_high_hop.png" type="Texture" id=3]

[node name="high_tech_hop_gun" type="Node2D"]
script = ExtResource( 2 )

[node name="high_tech_hop_gun" type="Sprite" parent="."]
position = Vector2( 13, -1 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="high_tech_hop_gun"]
position = Vector2( 20.6667, -3.33333 )

[node name="fire_rate" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="gunshot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = 5.0
pitch_scale = 2.0

[connection signal="timeout" from="fire_rate" to="." method="_on_fire_rate_timeout"]
